Fix : Button and filter alignment

--- a/static/css/custom.scss
+++ b/static/css/custom.scss
@@ -7010,4 +7010,4 @@ $b-toaster-zindex: 1100 !default;
     overflow-y: auto;
 }
 .calendar-container{max-height: calc(100vh - 290px);}
-.task-container{max-height: calc(100vh - 352px);}
+.task-container{max-height: calc(100vh - 290px);}
